--- a/packages/client/src/App/App.css
+++ b/packages/client/src/App/App.css
@@ -77,15 +77,15 @@
   display: flex;
   padding: 0.25rem;
   justify-content: center;
+  align-items: center;
+  flex-grow: 3;
 }
 
 .card-platform {
-  --height: 500px;
-  --width: 300px;
-
   background-color: transparent;
-  height: var(--height);
-  width: var(--width);
+  height: 100%;
+  min-height: 500px;
+  width: calc(100% / 5);
   margin: 0 4px;
   border-radius: 4px;
   box-shadow: 2px 2px 3px rgba(25, 25, 25, 0.7);
@@ -100,7 +100,7 @@
 
 .card-header {
   width: 100%;
-  min-height: calc(var(--height) - 300px);
+  height: 40%;
   background-color: var(--primary-color);
   background-image: url(../assets//images//amnestyLogo.png);
   background-size: 8rem;
@@ -121,18 +121,18 @@
 
 .card-content {
   width: 100%;
-  min-height: calc(var(--height) - 200px);
+  height: 60%;
   background-color: var(--secondary-color);
-  border-radius: 0 0 8px 8px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
 .app-footer {
   color: var(--secondary-text);
   margin-top: 0.25rem;
   background-color: var(--primary-color);
-  flex: 1 1 100%;
+  flex-grow: 1;
+  flex-shrink: 1;
 
   display: flex;
   flex-direction: column;
@@ -143,12 +143,12 @@
 .running-text {
   background-color: var(--secondary-color);
   width: 100%;
-  flex: 1 0 0;
-  /* position: relative; */
+  flex-grow: 1;
 
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 @keyframes scroll-left {
@@ -162,16 +162,16 @@
 }
 
 .footer-text {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 400;
-  /* position: absolute; */
+  white-space: nowrap;
   transform: translateX(100%);
   animation: scroll-left 40s linear infinite;
 }
 
 .copyright-text {
   color: var(--primary-text);
-  flex: 0 0 content;
+  flex-basis: content;
   margin: 0;
   padding: 0.5rem 0;
 }
