--- a/packages/client/src/Layout/Layout.css
+++ b/packages/client/src/Layout/Layout.css
@@ -4,3 +4,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.app-content {
+  color: var(--primary-text);
+  display: flex;
+  padding: 0.25rem;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 5;
+}
