refactor(client): move normalize css to reset.css

--- a/packages/client/src/HelpCenter/MenuCard/MenuCard.css
+++ b/packages/client/src/HelpCenter/MenuCard/MenuCard.css
@@ -1,4 +1,4 @@
-@import url(../../shared/styles/variables.css);
+@import "../../shared/styles/variables.css";
 
 .card-platform {
   background-color: transparent;
