--- a/packages/client/src/Layout/Footer/Footer.css
+++ b/packages/client/src/Layout/Footer/Footer.css
@@ -1,4 +1,4 @@
-@import url(../../shared/styles/variables.css);
+@import "../../shared/styles/variables.css";
 
 .app-footer {
   color: var(--secondary-text);
