--- a/packages/client/src/Layout/Header/Header.css
+++ b/packages/client/src/Layout/Header/Header.css
@@ -1,4 +1,4 @@
-@import url(../../shared/styles/variables.css);
+@import "../../shared/styles/variables.css";
 
 .app-header {
   background-color: var(--primary-color);
