--- a/packages/client/src/WaitList/CounterCard/CounterCard.css
+++ b/packages/client/src/WaitList/CounterCard/CounterCard.css
@@ -1,4 +1,4 @@
-@import url(../../shared/styles/variables.css);
+@import "../../shared/styles/variables.css";
 
 .card-platform {
   background-color: transparent;
