--- a/packages/client/src/Dashboard/ServiceCard/ServiceCard.css
+++ b/packages/client/src/Dashboard/ServiceCard/ServiceCard.css
@@ -2,26 +2,20 @@
 
 .card-platform {
   background-color: transparent;
-  height: 100%;
-  min-height: 500px;
-  width: calc(100% / 5);
+  /* height: auto; */
+  /* min-height: 200px; */
+  /* width: calc(100% / 4); */
+  /* flex-basis: calc(100% / 4); */
   margin: 0 4px;
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: 2px 2px 3px rgba(25, 25, 25, 0.7);
   transition: box-shadow 500ms;
 }
 
-.card-platform:hover,
-.card-platform:focus,
-.card-platform:active {
-  box-shadow: 4px 4px 3px 2px rgba(25, 25, 25, 0.7);
-}
-
 .card-header {
   width: 100%;
-  height: 40%;
+  height: 30%;
   background-color: var(--primary-color);
-  background-image: url(../../assets/images/amnestyLogo.png);
   background-size: 8rem;
   background-repeat: no-repeat;
   background-position: right top;
@@ -29,21 +23,30 @@
   display: flex;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
+  color: var(--primary-text);
 }
 
 .card-title {
   align-self: flex-end;
-  font-size: 2rem;
-  word-wrap: break-word;
+  font-size: 1.5rem;
   margin: 0;
 }
 
 .card-content {
   width: 100%;
-  height: 60%;
+  height: 70%;
   background-color: var(--secondary-color);
   border-bottom-right-radius: 8px;
   border-bottom-left-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.card-caption {
+  color: var(--primary-color);
+  font-size: 3rem;
+  margin: 0;
 }
 
 .card-items {
@@ -63,4 +66,13 @@
   background-color: rgb(253, 143, 0);
   border-radius: 4px;
   padding: 0.5rem 0.25rem;
+}
+
+.call-button {
+  font-size: 2rem;
+  background: var(--primary-color);
+  color: var(--primary-text);
+  border: 0 solid transparent;
+  padding: 1rem;
+  border-radius: 3px;
 }
