--- a/packages/client/src/components/ServiceCard.css
+++ b/packages/client/src/components/ServiceCard.css
@@ -1,4 +1,4 @@
-@import "../../shared/styles/variables.css";
+@import "../styles/variables.css";
 
 .card-platform {
   background-color: transparent;
